# FSSDM

./: .gitattributes  .gitignore  README.md
code/: README.md
code/cipher-inference/DDPM1/: prompt.txt  run_client_after_180m.sh  run_client_after_360m.sh  run_server_after_180m.sh  run_server_after_360m.sh
code/cipher-inference/DDPM1/benchmarks/: ddpm.cpp  ddpmallparametr.cpp  para_backup.hpp  unclip_img2imgsmall.cpp
code/cipher-inference/DDPM2/: CMakeLists.txt  modify.txt  rebuild.sh  run_client_after_360m.sh  run_server_after_360m.sh
code/cipher-inference/DDPM2/benchmarks/: a.txt  ddpm.cpp  ddpm_bench_config.json  ddpmallparametr.cpp  para.hpp
code/cipher-inference/DDPM2/benchmarks/backup_copy/: unclip_img2img-dm.cpp  unclip_img2imgsmall-dm.cpp
code/cipher-inference/DDPM2/include/shark/protocols/: argmax.hpp  common.hpp  lrs_exact.hpp  matmul.hpp  sigmoid.hpp  softmax.hpp
code/cipher-inference/DDPM2/include/shark/utils/: comm.hpp  timer.hpp
code/cipher-inference/DDPM2/src/crypto/: dcfring.cpp
code/cipher-inference/DDPM2/src/protocols/: common.cpp  conv.cpp  init.cpp  lrs_exact.cpp  output.cpp  reciprocal.cpp  relutruncate.cpp  softmax.cpp
code/cipher-inference/DDPM2/src/utils/: timer.cpp
code/cipher-inference/SDUnCLIP1/: AGENTS.md  image.txt  run_client_after_180m.sh  run_client_after_360m.sh  run_server_after_180m.sh  run_server_after_360m.sh
code/cipher-inference/SDUnCLIP1/benchmarks/: ddpm.cpp  stableunclip.py  unclip_img2imgsmall.cpp  unclip_img2imgsmallallparametr.cpp
code/cipher-inference/SDUnCLIP2/: CMakeLists.txt  mask.txt  mem_used.txt  run_client_after_180m.sh  run_client_after_360m.sh  run_dealer_after_300m.sh  run_dealer_after_360m.sh  run_server_after_180m.sh  run_server_after_360m.sh
code/cipher-inference/SDUnCLIP2/benchmarks/: para.hpp  unclip_img2imgsmall.cpp  unclip_img2imgsmall2.cpp  unclip_img2imgsmallallparametr.cpp
code/plain-inference/DDPM/: flax_train_tiny_mnist.py  plain.py  plain1_kid_jax.py  plain1_ssim_jax.py  plain3_kid_jax.py  plain3_ssim_jax.py  plain_ablation_jax.py  plain_cipherdm.py  plain_fssdm.py  plain_kid.py  plain_kid_jax.py  plain_ssim.py  plain_ssim_jax.py  ssim_common.py
code/plain-inference/SDUnCLIP/: eval_coco_unclip_fast_det.py  generate_cc3m_unclip_fast_fp32_no_xformers_no_safety_debug.py  generate_coco_unclip_fast_fp32_no_xformers_no_safety_debug.py  generate_flickr30k_unclip_fast_fp32_no_xformers_no_safety_debug.py  modify_1000.sh  mse.py  run_all_unclip_once_fp32_no_xformers_no_safety_1000_det.py
(+38 files in other folders)
